tests/lean/noncompSection.lean.expected.out
1
noncompSection.lean:36:4-36:5: error: failed to compile definition, consider marking it as 'noncomputable' because it depends on 'Classical.choose', and it does not have executable code
g is noncomputable
